--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Header & Navigation -->
     <header class="py-6 px-4 md:px-12 z-10 sticky top-0 bg-black bg-opacity-80 backdrop-blur-sm">
         <nav class="flex justify-between items-center">
-            <a href="#" class="text-2xl md:text-3xl font-bold tracking-tight text-white hover:text-gray-300 transition-colors">
+            <a href="index.html" class="text-2xl md:text-3xl font-bold tracking-tight text-white hover:text-gray-300 transition-colors">
                 <span class="text-gradient">Cybersecurity Portfolio</span>
             </a>
             <div class="hidden md:flex space-x-8 text-lg">
-                <a href="#projects" class="hover:text-blue-400 transition-colors">Projects</a>
+                <a href="projects.html" class="hover:text-blue-400 transition-colors">Projects</a>
                 <a href="#about" class="hover:text-blue-400 transition-colors">About Me</a>
                 <a href="#contact" class="hover:text-blue-400 transition-colors">Contact</a>
             </div>
@@ -32,7 +32,7 @@
             </button>
         </nav>
         <div id="mobile-menu" class="hidden md:hidden mt-4 text-center space-y-4">
-            <a href="#projects" class="block text-xl font-medium hover:text-blue-400 transition-colors">Projects</a>
+            <a href="projects.html" class="block text-xl font-medium hover:text-blue-400 transition-colors">Projects</a>
             <a href="#about" class="block text-xl font-medium hover:text-blue-400 transition-colors">About Me</a>
             <a href="#contact" class="block text-xl font-medium hover:text-blue-400 transition-colors">Contact</a>
         </div>
@@ -112,7 +112,7 @@
 
         <!-- Link to all projects -->
         <div class="text-center mt-12">
-            <a href="#" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-blue-500 rounded-full hover:bg-blue-600 transition-colors">
+            <a href="projects.html" class="inline-block px-8 py-4 text-lg font-semibold text-white bg-blue-500 rounded-full hover:bg-blue-600 transition-colors">
                 View All Projects
             </a>
         </div>
