--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p class="text-gray-400 mb-4">
                     A detailed investigation of the techniques used in modern phishing campaigns and how to recognize them.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -72,7 +72,7 @@
                 <p class="text-gray-400 mb-4">
                     A practical guide to conducting penetration tests and securing web applications.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -86,7 +86,7 @@
                 <p class="text-gray-400 mb-4">
                     A strategic plan for responding to security incidents, especially for small and medium-sized enterprises.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -100,7 +100,7 @@
                 <p class="text-gray-400 mb-4">
                     An insight into quantum cryptography and the challenges it brings to digital security.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
