--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                 <p class="text-gray-400 mb-4">
                     A detailed investigation of the techniques used in modern phishing campaigns and how to recognize them.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -64,7 +64,7 @@
                 <p class="text-gray-400 mb-4">
                     A practical guide to conducting penetration tests and securing web applications.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -78,7 +78,7 @@
                 <p class="text-gray-400 mb-4">
                     A strategic plan for responding to security incidents, especially for small and medium-sized enterprises.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -92,7 +92,7 @@
                 <p class="text-gray-400 mb-4">
                     An insight into quantum cryptography and the challenges it brings to digital security.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -106,7 +106,7 @@
                 <p class="text-gray-400 mb-4">
                     A detailed study on network vulnerabilities and best practices for securing infrastructure.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -119,7 +119,7 @@
                 <p class="text-gray-400 mb-4">
                     An in-depth look at dissecting malware to understand its functionality and create effective countermeasures.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -132,7 +132,7 @@
                 <p class="text-gray-400 mb-4">
                     Exploring proactive security measures to detect and mitigate threats before they cause damage.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -145,7 +145,7 @@
                 <p class="text-gray-400 mb-4">
                     A comprehensive guide to securing data and applications in public and private cloud environments.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
@@ -157,7 +157,7 @@
     </main>
 
     <!-- Footer -->
-    <footer id="contact" class="py-8 text-center text-gray-500 text-sm">
+    <footer class="py-8 text-center text-gray-500 text-sm border-t border-gray-800 mt-16">
         <p>Built with Tailwind CSS & ❤️</p>
         <p class="mt-2">© 2024 Cybersecurity Portfolio. All Rights Reserved.</p>
     </footer>
