--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
             <!-- Card 1 -->
             <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
-                <h3 class="text-2xl font-bold text-white mb-2">Analysis of Phishing Attacks</h3>
+                <h3 class="text-2xl font-bold text-white mb-2">Configuration and Log Ingestion with Splunk</h3>
                 <p class="text-gray-400 mb-4">
                     A detailed investigation of the techniques used in modern phishing campaigns and how to recognize them.
                 </p>
-                <a href="writeup.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="write-ups/Configuration and Log Ingestion with Splunk/Splunk Project.md" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
