--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p class="text-gray-400 mb-4">
                     A detailed investigation of the techniques used in modern phishing campaigns and how to recognize them.
                 </p>
-                <a href="write-ups/Configuration and Log Ingestion with Splunk/Splunk Project.md" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="write-ups/Configuration and Log Ingestion with Splunk/Configuration and Log Ingestion with Splunk.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Read Report
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
