--- a/projects.html
+++ b/projects.html
@@ -2,23 +2,20 @@
 layout: default
 title: All Projects
 ---
-<main class="px-4 md:px-12 py-16">
-    <h1 class="text-4xl md:text-5xl font-extrabold leading-tight text-white mb-8">
-        All Projects
-    </h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
-        <!-- Loop through all posts -->
-        {% for post in site.posts %}
-        <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
-            <h3 class="text-2xl font-bold text-white mb-2">{{ post.title }}</h3>
-            <p class="text-gray-400 mb-4">{{ post.description }}</p>
-            <a href="{{ post.url }}" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
-                Read Report
-                <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
-                </svg>
-            </a>
+<main class="py-16">
+    <div class="container mx-auto px-4 md:px-12">
+        <h1 class="text-4xl md:text-5xl font-extrabold text-white text-center mb-12">All Projects</h1>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+            {% for post in site.posts %}
+            <div class="bento-card p-6 rounded-2xl shadow-lg border border-gray-800 flex flex-col justify-between transition-transform duration-300 hover:scale-105">
+                <div>
+                    <h2 class="text-xl md:text-2xl font-bold text-white mb-2">{{ post.title }}</h2>
+                    <p class="text-gray-400 mb-4">{{ post.description }}</p>
+                </div>
+                <a href="{{ post.url }}" class="text-blue-400 hover:underline font-medium self-end">Read Report →</a>
+            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </main>
