--- a/index.html
+++ b/index.html
@@ -1,79 +1,38 @@
-<!DOCTYPE html>
-<html lang="en" class="bg-gray-950 text-gray-300 antialiased scroll-smooth">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }} | Cybersecurity Portfolio</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
-        body { font-family: 'Inter', sans-serif; }
-        .hero-gradient { background: radial-gradient(circle at top left, rgba(29, 78, 216, 0.2), transparent 50%), radial-gradient(circle at bottom right, rgba(109, 40, 217, 0.2), transparent 50%); }
-        .bento-card { backdrop-filter: blur(8px); background-color: rgba(255, 255, 255, 0.05); }
-        .text-gradient { background: linear-gradient(45deg, #A5B4FC, #818CF8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-    </style>
-</head>
-<body class="bg-gray-950 text-gray-300">
+---
+layout: default
+title: Home
+---
+<main class="hero-gradient min-h-screen flex items-center justify-center text-center px-4 md:px-12 pt-16">
+    <div class="max-w-4xl mx-auto py-16">
+        <h1 class="text-5xl md:text-7xl font-extrabold text-white leading-tight">
+            <span class="text-gradient">Your Name's</span> <br>
+            Cybersecurity Portfolio
+        </h1>
+        <p class="mt-4 text-xl md:text-2xl text-gray-400">
+            A showcase of my latest research, analyses, and projects in digital security and ethical hacking.
+        </p>
+    </div>
+</main>
 
-    <!-- Header -->
-    <header class="fixed top-0 left-0 right-0 z-50 bg-gray-950 bg-opacity-80 backdrop-blur-md">
-        <nav class="container mx-auto px-4 md:px-12 flex justify-between items-center py-4">
-            <a href="/" class="text-xl md:text-2xl font-extrabold text-white">
-                <span class="text-gradient">Cyber</span><span class="text-white">Portfolio</span>
-            </a>
-            <div class="hidden md:flex space-x-6">
-                <a href="/" class="text-gray-300 hover:text-white transition-colors">Home</a>
-                <a href="/projects.html" class="text-gray-300 hover:text-white transition-colors">Projects</a>
-            </div>
-            <!-- Mobile Menu Button -->
-            <button class="md:hidden text-gray-300 hover:text-white transition-colors">
-                <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-                </svg>
-            </button>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <main class="hero-gradient min-h-screen flex items-center justify-center text-center px-4 md:px-12 pt-16">
-        <div class="max-w-4xl mx-auto py-16">
-            <h1 class="text-5xl md:text-7xl font-extrabold text-white leading-tight">
-                <span class="text-gradient">Your Name's</span> <br>
-                Cybersecurity Portfolio
-            </h1>
-            <p class="mt-4 text-xl md:text-2xl text-gray-400">
-                A showcase of my latest research, analyses, and projects in digital security and ethical hacking.
-            </p>
-        </div>
-    </main>
-
-    <!-- Latest Projects Section -->
-    <section id="latest-projects" class="py-16 bg-gray-950">
-        <div class="container mx-auto px-4 md:px-12">
-            <h2 class="text-3xl md:text-4xl font-bold text-white mb-8 text-center">Latest Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
-                {% for post in site.posts limit:4 %}
-                <div class="bento-card p-6 rounded-2xl shadow-lg border border-gray-800 flex flex-col justify-between transition-transform duration-300 hover:scale-105">
-                    <div>
-                        <h3 class="text-xl md:text-2xl font-bold text-white mb-2">{{ post.title }}</h3>
-                        <p class="text-gray-400 mb-4">{{ post.description }}</p>
-                    </div>
-                    <a href="{{ post.url }}" class="text-blue-400 hover:underline font-medium self-end">Read Report →</a>
+<!-- Latest Projects Section -->
+<section id="latest-projects" class="py-16 bg-gray-950">
+    <div class="container mx-auto px-4 md:px-12">
+        <h2 class="text-3xl md:text-4xl font-bold text-white mb-8 text-center">Latest Projects</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+            {% for post in site.posts limit:4 %}
+            <div class="bento-card p-6 rounded-2xl shadow-lg border border-gray-800 flex flex-col justify-between transition-transform duration-300 hover:scale-105">
+                <div>
+                    <h3 class="text-xl md:text-2xl font-bold text-white mb-2">{{ post.title }}</h3>
+                    <p class="text-gray-400 mb-4">{{ post.description }}</p>
                 </div>
-                {% endfor %}
+                <a href="{{ post.url }}" class="text-blue-400 hover:underline font-medium self-end">Read Report →</a>
             </div>
-            <div class="text-center mt-12">
-                <a href="/projects.html" class="inline-block px-8 py-3 bg-blue-600 text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition-colors">
-                    View All Projects
-                </a>
-            </div>
+            {% endfor %}
         </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-900 py-8 text-center text-gray-500">
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
+        <div class="text-center mt-12">
+            <a href="/projects.html" class="inline-block px-8 py-3 bg-blue-600 text-white font-semibold rounded-full shadow-lg hover:bg-blue-700 transition-colors">
+                View All Projects
+            </a>
+        </div>
+    </div>
+</section>
