--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,144 @@
----
-layout: default
-title: All Projects
----
-<main class="py-16">
-    <div class="container mx-auto px-4 md:px-12">
-        <h1 class="text-4xl md:text-5xl font-extrabold text-white text-center mb-12">All Projects</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All Projects</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google Font (Inter) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0c0a0c;
+            color: #e2e8f0;
+        }
+        .hero-gradient {
+            background: linear-gradient(135deg, #1f2937 0%, #0c0a0c 100%);
+        }
+        .text-gradient {
+            background-image: linear-gradient(45deg, #7452d3, #00C6FF);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .bento-card {
+            background-color: #1a1a2e;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .bento-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 1 10px 20px rgba(0, 0, 0, 0.4);
+        }
+    </style>
+</head>
+<body class="antialiased">
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
-            {% for post in site.posts %}
-            <div class="bento-card p-6 rounded-2xl shadow-lg border border-gray-800 flex flex-col justify-between transition-transform duration-300 hover:scale-105">
-                <div>
-                    <h2 class="text-xl md:text-2xl font-bold text-white mb-2">{{ post.title }}</h2>
-                    <p class="text-gray-400 mb-4">{{ post.description }}</p>
-                </div>
-                <a href="{{ post.url }}" class="text-blue-400 hover:underline font-medium self-end">Read Report →</a>
+    <!-- Header & Navigation -->
+    <header class="py-6 px-4 md:px-12 z-10 sticky top-0 bg-black bg-opacity-80 backdrop-blur-sm">
+        <nav class="flex justify-between items-center">
+            <a href="portfolio.html" class="text-2xl md:text-3xl font-bold tracking-tight text-white hover:text-gray-300 transition-colors">
+                <span class="text-gradient">Cybersecurity Portfolio</span>
+            </a>
+            <div class="hidden md:flex space-x-8 text-lg">
+                <a href="portfolio.html#projects" class="hover:text-blue-400 transition-colors">Projects</a>
+                <a href="portfolio.html#about" class="hover:text-blue-400 transition-colors">About Me</a>
+                <a href="portfolio.html#contact" class="hover:text-blue-400 transition-colors">Contact</a>
             </div>
-            {% endfor %}
+            <button id="mobile-menu-button" class="md:hidden p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
+                <svg class="w-6 h-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
+        </nav>
+        <div id="mobile-menu" class="hidden md:hidden mt-4 text-center space-y-4">
+            <a href="portfolio.html#projects" class="block text-xl font-medium hover:text-blue-400 transition-colors">Projects</a>
+            <a href="portfolio.html#about" class="block text-xl font-medium hover:text-blue-400 transition-colors">About Me</a>
+            <a href="portfolio.html#contact" class="block text-xl font-medium hover:text-blue-400 transition-colors">Contact</a>
         </div>
-    </div>
-</main>
+    </header>
+
+    <!-- Projects Section -->
+    <main class="container mx-auto px-4 md:px-12 py-16">
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-8 text-center">All Projects</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
+            <!-- Card 1 -->
+            <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
+                <h3 class="text-2xl font-bold text-white mb-2">Analysis of Phishing Attacks</h3>
+                <p class="text-gray-400 mb-4">
+                    A detailed investigation of the techniques used in modern phishing campaigns and how to recognize them.
+                </p>
+                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                    Read Report
+                    <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
+                <h3 class="text-2xl font-bold text-white mb-2">Security Audit for Web Applications</h3>
+                <p class="text-gray-400 mb-4">
+                    A practical guide to conducting penetration tests and securing web applications.
+                </p>
+                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                    Read Report
+                    <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
+                <h3 class="text-2xl font-bold text-white mb-2">Incident Response for Small and Medium Businesses</h3>
+                <p class="text-gray-400 mb-4">
+                    A strategic plan for responding to security incidents, especially for small and medium-sized enterprises.
+                </p>
+                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                    Read Report
+                    <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="bento-card p-6 md:p-8 rounded-2xl border border-gray-700">
+                <h3 class="text-2xl font-bold text-white mb-2">The Future of Cryptography</h3>
+                <p class="text-gray-400 mb-4">
+                    An insight into quantum cryptography and the challenges it brings to digital security.
+                </p>
+                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                    Read Report
+                    <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+            
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer id="contact" class="py-8 text-center text-gray-500 text-sm">
+        <p>Built with Tailwind CSS & ❤️</p>
+        <p class="mt-2">© 2024 Cybersecurity Portfolio. All Rights Reserved.</p>
+    </footer>
+
+    <!-- JavaScript for mobile menu -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const mobileMenuButton = document.getElementById('mobile-menu-button');
+            const mobileMenu = document.getElementById('mobile-menu');
+
+            mobileMenuButton.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+            });
+        });
+    </script>
+</body>
+</html>
