--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="text-gray-400 mb-4">
                     Eine detaillierte Untersuchung der Techniken, die bei modernen Phishing-Kampagnen eingesetzt werden, und wie man sie erkennt.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="_post/Configuration and Log Ingestion with Splunk/Configuration and Log Ingestion with Splunk.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Bericht lesen
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
