--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p class="text-gray-400 mb-4">
                     Ein praktischer Leitfaden zur Durchführung von Penetrationstests und zur Absicherung von Web-Anwendungen.
                 </p>
-                <a href="#" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
+                <a href="projects/Configuration and Log Ingestion with Splunk.html" class="text-blue-400 hover:text-blue-300 font-semibold inline-flex items-center">
                     Bericht lesen
                     <svg class="ml-2 w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
